fix responses to reviewers

--- a/jcgs_reviewer/reviewer_2.tex
+++ b/jcgs_reviewer/reviewer_2.tex
@@ -46,7 +46,7 @@
 		We have found that our algorithm scales well with $p$. The primary concern in gradient-based methods that tune the regularization parameter is the computational time when calculating the gradient. We have updated Section 3 to discuss this point in more detail:
 		
 		\begin{quote}
-			 The computational time to calculate the gradient of the validation loss does not grow with the number of model parameters; instead it grows with the dimension of the differentiable/local optimality space. For example, in the lasso, the runtime scales with the number of nonzero features. Therefore we can efficiently calculate the gradient of the validation loss as long as the dimension of the differentiable space is small.
+			 The computational time to calculate the gradient of the validation loss does not grow with the number of model parameters; instead it grows with the dimension of the differentiable/local optimality space. Therefore we can efficiently calculate the gradient of the validation loss as long as the dimension of the differentiable space is small.
 		\end{quote}
 		
 	\end{enumerate}
